--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,6 @@ left: 5vw;
 }
 
 
-
-
 .banner-text{
 position: absolute;
 top : 55vh;
@@ -35,29 +33,36 @@ height: 4.5vw;
 
 
 .movies-list{
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 1rem;
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
+padding: 1rem;
 }
 
 
 
 .movie-card{
-  margin: 1rem;
-  width: 20vw;
+margin: 1rem;
+width: 20vw;
+position: relative;
 }
 
+
 .movie-title{
-  position : absolute;
-  top : 1rem;
-  left : 1rem;
-  color : white
- }
- 
- 
- .movies-button{
-   position: absolute;
-   bottom: 2rem;
-   left : 5rem
- }
+position : absolute;
+top : 1rem;
+left : 1rem;
+color : white
+}
+
+
+.movies-button{
+position: absolute;
+bottom: 2rem;
+left : 5rem
+}
+
+
+.genre-selector{
+padding: 3rem;
+}
